[workspace]
resolver = "2"
members = ["pg-tenant-monitor", "pg-tenant-monitor-common", "pg-tenant-monitor-ebpf"]
default-members = ["pg-tenant-monitor", "pg-tenant-monitor-common"]

[workspace.dependencies]
aya = { version = "0.13.1", default-features = false }
aya-build = { version = "0.1.2", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log = { version = "0.2.1", default-features = false }
aya-log-ebpf = { version = "0.1.1", default-features = false }
anyhow = { version = "1", default-features = false }
bytes = { version = "1", default-features = false }
crossbeam = { version = "0.5", default-features = true }
# `std` feature is currently required to build `clap`.
#
# See https://github.com/clap-rs/clap/blob/61f5ee5/clap_builder/src/lib.rs#L15.
clap = { version = "4.5.20", default-features = false, features = ["std"] }
dashmap = { version = "6.1", default-features = false }
ctrlc =  { version = "3.4", default-features = false }
env_logger = { version = "0.11.5", default-features = false }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
ratatui =  { version = "0.29", default-features = false, features = ["crossterm"] }
regex = { version = "1.11", default-features = false }
tokio = { version = "1.40.0", default-features = false }
which = { version = "6.0.0", default-features = false }

[profile.release.package.pg-tenant-monitor-ebpf]
debug = 2
codegen-units = 1
