[package]
name = "pg-tenant-monitor-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
pg-tenant-monitor-common = { path = "../pg-tenant-monitor-common" }
aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "pg-tenant-monitor"
path = "src/main.rs"
